# mdk

./: .coderabbit.yaml  .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.hermes-marmot  Dockerfile.openclaw-marmot  Dockerfile.quic-broker  Justfile  PR-REVIEW.md  README.md  SECURITY.md  bacon.toml  docker-compose.yml  justfile  release.md  resume
crates/agent-connector/: AGENTS.md  Cargo.toml  README.md
crates/agent-connector/src/: account.rs  allowlist.rs  bootstrap.rs  connection.rs  error.rs  event_projection.rs  inbound.rs  invite_policy.rs  lib.rs  media_roots.rs  media_temp.rs  messaging.rs  quic.rs  socket.rs  stream.rs  stream_session.rs  tests.rs  validation.rs
crates/agent-stream-compose/: AGENTS.md  Cargo.toml  README.md
crates/agent-stream-compose/src/: lib.rs  tests.rs
crates/cgka-conformance/: AGENTS.md  Cargo.toml  README.md
crates/cgka-conformance/src/: family.rs  lib.rs  policy_cases.rs  proptest_support.rs  report.rs  scenario.rs  vector.rs
crates/cgka-conformance/tests/: canonical_scenarios.rs  generated_policy_cases.rs  proptest_invariants.proptest-regressions  proptest_invariants.rs  report_runner.rs
crates/cgka-conformance/vectors/: deliberate-fork-recovery.v1.json  three-client-message-exchange.v1.json
crates/cgka-engine/: AGENTS.md  Cargo.toml  README.md
crates/cgka-engine/src/: AGENTS.md  account_identity_proof.rs  app_components.rs  app_payload.rs  audit_helpers.rs  auto_committer.rs  bounded_id_set.rs  canonicalization.rs  capabilities.rs  capability_manager.rs  convergence.rs  distributed_convergence.rs  engine.rs  engine_metrics.rs  epoch_manager.rs  feature_registry.rs  forensics.rs  fork_recovery.rs  group_context_view.rs  group_data.rs  group_lifecycle.rs  group_state_changes.rs  identity.rs  key_package.rs  lib.rs  message_disposition.rs  message_processor.rs  openmls_projection.rs  pending_commit_guard.rs  proposal_authorization.rs  provider.rs  publish.rs  snapshot_guard.rs  update_group_data.rs  upgrade.rs  wire_format.rs
crates/cgka-engine/tests/: AGENTS.md  application_data_wire.rs  audit_log.rs  auto_commit_atomicity.rs  capabilities.rs  deferred_peel_lifecycle.rs  distributed_convergence.rs  fork_detection.rs  group_context_view.rs  group_creation.rs  group_data_routing_id.rs  hydration_quarantine.rs  ingest.rs  invite_leave.rs  mip03_guards.rs  pending_commit_recovery.rs  proposal_authorization.rs  publish_lifecycle.rs  scaffold.rs  snapshot_privacy.rs  sqlite_storage.rs  update_group_data.rs
crates/cgka-session/: AGENTS.md  Cargo.toml  README.md
crates/cgka-session/src/: lib.rs
crates/cgka-session/tests/: AGENTS.md  nostr_stack.rs  nostr_stack_chaos.rs  session_lifecycle.rs
crates/cli/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/cli/src/: args.rs  daemon.rs  error.rs  lib.rs  main.rs  tui.rs
crates/cli/tests/: cli.rs
crates/dm/: AGENTS.md  Cargo.toml  README.md
crates/dm/src/: daemon.rs  lib.rs  main.rs  tui.rs
crates/dm/tests/: cli.rs
crates/incident-replay/: AGENTS.md  Cargo.toml
crates/incident-replay/src/: accept.rs  classify.rs  convergence.rs  export.rs  fork.rs  lib.rs  main.rs  ndjson.rs  synth.rs
crates/incident-replay/tests/: accept.rs  accept_convergence.rs  classify.rs  convergence.rs  fork.rs  ndjson.rs  parse.rs
crates/marmot-account/: AGENTS.md  Cargo.toml  README.md
crates/marmot-account/src/: error.rs  home.rs  io.rs  key_package.rs  keyring.rs  lib.rs  nip49_export.rs  routing.rs  runtime.rs  secret_store.rs
crates/marmot-account/tests/: home.rs  runtime.rs
crates/marmot-app/: AGENTS.md  Cargo.toml  README.md
crates/marmot-app/src/: agent_streams.rs  app_telemetry.rs  audit_log.rs  client.rs  config.rs  conversions.rs  directory_cache.rs  drafts.rs  error.rs  external_signer.rs  groups.rs  ids.rs  key_package_records.rs  lib.rs  media.rs  notifications.rs  projection.rs  relay_plane.rs  relay_telemetry_export.rs  runtime.rs  sqlcipher.rs  stickers.rs  tests.rs
crates/marmot-app/tests/: audit_logs.rs  cursor_persistence.rs  epoch_stall_backfill_audit.rs  local_runtime.rs  malformed_445_drain.rs  next_event_backfill.rs  relay_runtime.rs  relay_telemetry_otlp.rs  since_floor.rs
crates/marmot-c/: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  c-bindings.sh  c-smoke.sh  cbindgen.toml  marmot-c.pc.in
crates/marmot-c/examples/: smoke.c  smoke.go  smoke.lua  smoke.nim  smoke.odin  smoke.php  smoke.zig
crates/marmot-c/include/: marmot.h
crates/marmot-c/src/: lib.rs  memory.rs  status.rs  subscriptions.rs
crates/marmot-forensics-analyzer/: AGENTS.md  Cargo.toml
crates/marmot-forensics-analyzer/src/: lib.rs  main.rs
crates/marmot-markdown/: AGENTS.md  Cargo.toml  README.md
crates/marmot-markdown/src/: ast.rs  block.rs  destination.rs  entity.rs  inline.rs  lib.rs  nostr.rs  scanner.rs
crates/marmot-markdown/tests/: golden.rs  serde_roundtrip.rs  smoke.rs  spec.rs  spec_complex.rs  unit_autolinks.rs  unit_blocks.rs  unit_code_math_refs.rs  unit_complex.rs  unit_containers.rs  unit_emphasis.rs  unit_inlines.rs  unit_links.rs  unit_nesting_depth.rs  unit_nostr.rs  unit_tables.rs
crates/marmot-uniffi/: .gitignore  AGENTS.md  Cargo.toml  README.md  kotlin-bindings.sh  marmotkit-endpoints.env  uniffi.toml  xcframework.sh
crates/marmot-uniffi/src/: conversions.rs  errors.rs  external_signer.rs  lib.rs  markdown.rs  subscriptions.rs
crates/marmot-uniffi/tests/: smoke.rs
crates/mdk-cbindings/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml
crates/storage-memory/: AGENTS.md  Cargo.toml  README.md
crates/storage-sqlite/: AGENTS.md  Cargo.toml  README.md
crates/traits/: AGENTS.md  Cargo.toml  README.md
crates/transport-nostr-adapter/: AGENTS.md  Cargo.toml  README.md
crates/transport-nostr-peeler/: AGENTS.md  Cargo.toml  README.md
crates/transport-quic-broker/: AGENTS.md  Cargo.toml  README.md
crates/transport-quic-stream/: AGENTS.md  Cargo.toml  README.md
integrations/wn-opencode/: Cargo.toml  README.md  TODO.md
relay-tests/: Cargo.toml  README.md  relay-status.json
relay-tests/src/: main.rs
(+832 files in other folders)
