[workspace]
resolver = "3"
members = [
    "crates/traits",
    "crates/cgka-engine",
    "crates/cgka-session",
    "crates/storage-memory",
    "crates/storage-sqlite",
    "crates/cgka-conformance-simulator",
    "crates/transport-nostr-peeler",
    "crates/transport-nostr-adapter",
    "crates/marmot-account",
    "crates/marmot-lab",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
publish = false

[workspace.dependencies]
# OpenMLS family — tilde-pinned to avoid silent companion-crate skew.
openmls = "~0.8.1"
openmls_basic_credential = "~0.5"
openmls_rust_crypto = "~0.5"
openmls_traits = "~0.5"
tls_codec = "~0.4"

# async
tokio = { version = "1", features = ["sync", "macros", "rt", "rt-multi-thread", "time"] }
async-trait = "0.1"
futures = "0.3"

# utils
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
sha2 = "0.10"
chacha20poly1305 = "0.10"
nostr = { version = "0.44.2", default-features = false, features = ["std", "nip59"] }
nostr-sdk = { version = "0.44", features = ["nip59"] }
nostr-relay-builder = "0.44"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
tempfile = "3"

# test
proptest = "1"
insta = { version = "1", features = ["json"] }
test-log = { version = "0.2", features = ["trace"] }

# workspace-internal
cgka-traits = { path = "crates/traits" }
cgka-engine = { path = "crates/cgka-engine" }
cgka-session = { path = "crates/cgka-session" }
storage-memory = { path = "crates/storage-memory" }
storage-sqlite = { path = "crates/storage-sqlite" }
cgka-conformance-simulator = { path = "crates/cgka-conformance-simulator" }
transport-nostr-peeler = { path = "crates/transport-nostr-peeler" }
transport-nostr-adapter = { path = "crates/transport-nostr-adapter" }
marmot-account = { path = "crates/marmot-account" }
marmot-lab = { path = "crates/marmot-lab" }
