[workspace]
resolver = "3"
members = [
    "crates/traits",
    "crates/cgka-engine",
    "crates/cgka-session",
    "crates/storage-sqlite",
    "crates/cgka-conformance-simulator",
    "crates/transport-nostr-peeler",
    "crates/transport-nostr-adapter",
    "crates/transport-quic-stream",
    "crates/transport-quic-broker",
    "crates/marmot-account",
    "crates/marmot-app",
    "crates/marmot-uniffi",
    "crates/cli",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
publish = false

[workspace.dependencies]
# OpenMLS family — tilde-pinned to avoid silent companion-crate skew.
openmls = { version = "~0.8.1", features = ["extensions-draft-08"] }
openmls_basic_credential = "~0.5"
openmls_memory_storage = { version = "~0.5", features = ["extensions-draft-08"] }
openmls_rust_crypto = "~0.5"
openmls_traits = { version = "~0.5", features = ["extensions-draft-08"] }
tls_codec = "~0.4"

# async
tokio = { version = "1", features = ["sync", "macros", "rt", "rt-multi-thread", "time"] }
async-trait = "0.1"
futures = "0.3"

# utils
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
libc = "0.2"
hkdf = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.6", features = ["derive"] }
# unstable-rendered-line-info exposes Paragraph::line_count for wrap-aware TUI scroll math.
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
rand = "0.8"
sha2 = "0.10"
url = "2"
chacha20poly1305 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
zeroize = "1"
keyring-core = "1"
quinn = { version = "0.11", default-features = false, features = ["log", "platform-verifier", "runtime-tokio", "rustls-ring"] }
rcgen = "0.14"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
nostr = { version = "0.44.2", default-features = false, features = ["std", "nip59"] }
nostr-sdk = { version = "0.44", features = ["nip59"] }
nostr-relay-builder = "0.44"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl", "trace"] }
tempfile = "3"

# test
proptest = "1"
insta = { version = "1", features = ["json"] }
test-log = { version = "0.2", features = ["trace"] }

# workspace-internal
cgka-traits = { path = "crates/traits" }
cgka-engine = { path = "crates/cgka-engine" }
cgka-session = { path = "crates/cgka-session" }
storage-sqlite = { path = "crates/storage-sqlite" }
cgka-conformance-simulator = { path = "crates/cgka-conformance-simulator" }
transport-nostr-peeler = { path = "crates/transport-nostr-peeler" }
transport-nostr-adapter = { path = "crates/transport-nostr-adapter" }
transport-quic-stream = { path = "crates/transport-quic-stream" }
transport-quic-broker = { path = "crates/transport-quic-broker" }
marmot-account = { path = "crates/marmot-account" }
marmot-app = { path = "crates/marmot-app" }
marmot-uniffi = { path = "crates/marmot-uniffi" }
darkmatter-cli = { path = "crates/cli" }
