[workspace]
resolver = "3"
members = [
    "crates/fs-private",
    "crates/traits",
    "crates/cgka-engine",
    "crates/cgka-session",
    "crates/storage-sqlite",
    "crates/cgka-conformance-simulator",
    "crates/incident-replay",
    "crates/transport-nostr-peeler",
    "crates/transport-nostr-adapter",
    "crates/transport-quic-stream",
    "crates/transport-quic-broker",
    "crates/agent-stream-compose",
    "crates/agent-control",
    "crates/agent-connector",
    "crates/marmot-forensics",
    "crates/marmot-markdown",
    "crates/marmot-account",
    "crates/marmot-app",
    "crates/marmot-uniffi",
    "crates/cli",
    "integrations/opencode/marmot",
]

[workspace.package]
edition = "2024"
version = "0.9.6"
license = "MIT"
publish = false

[workspace.dependencies]
# OpenMLS family — exact-pinned to the draft-10 last-resort KeyPackage fix.
# Keep every companion crate on the same repository commit to prevent source skew.
# Migration: once an upstream OpenMLS release contains this fix, replace all five
# git entries together with one matching upstream release series and remove the fork pin.
openmls = { git = "https://github.com/erskingardner/openmls.git", rev = "59e7d3b27a7e95237879dd5478de1fd90eff7ada", features = ["extensions-draft"] }
openmls_basic_credential = { git = "https://github.com/erskingardner/openmls.git", rev = "59e7d3b27a7e95237879dd5478de1fd90eff7ada" }
openmls_memory_storage = { git = "https://github.com/erskingardner/openmls.git", rev = "59e7d3b27a7e95237879dd5478de1fd90eff7ada", features = ["extensions-draft"] }
openmls_rust_crypto = { git = "https://github.com/erskingardner/openmls.git", rev = "59e7d3b27a7e95237879dd5478de1fd90eff7ada" }
openmls_traits = { git = "https://github.com/erskingardner/openmls.git", rev = "59e7d3b27a7e95237879dd5478de1fd90eff7ada", features = ["extensions-draft"] }
tls_codec = "~0.5"

# async
tokio = { version = "1", features = ["sync", "macros", "rt", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
futures = "0.3"

# utils
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
libc = "0.2"
hkdf = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.6", features = ["derive"] }
# unstable-rendered-line-info exposes Paragraph::line_count for wrap-aware TUI scroll math.
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
# Inbound-media rendering in the TUI. `default-features = false` is load-bearing:
# ratatui-image's defaults pull `chafa-dyn`, which needs the system libchafa C
# library and would break CI and packaging (dependency verdict in tui.md).
ratatui-image = { version = "10", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
# General-category lookups for the terminal untrusted-text sanitizer (drop the
# whole Cf format class instead of a drifting hardcoded denylist).
unicode-properties = { version = "0.1", default-features = false, features = ["general-category"] }
# Extended grapheme-cluster segmentation for the TUI /react guard (one cluster ==
# one emoji). Already in the tree via ratatui; declared here so wn-cli can depend
# on it directly at the workspace-consistent version.
unicode-segmentation = "1"
unicode-normalization = "0.1"
rand = "0.8"
sha2 = "0.10"
url = "2"
psl = "2"
bech32 = "0.11"
chacha20poly1305 = "0.10"
scrypt = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
zeroize = "1"
keyring-core = "1"
quinn = { version = "0.11", default-features = false, features = ["log", "platform-verifier", "runtime-tokio", "rustls-ring"] }
rcgen = "0.14"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
# Already in the graph through quinn's platform-verifier feature; direct dep so
# the broker can build ALPN-carrying rustls client configs with platform trust.
rustls-platform-verifier = "0.6"
nostr = { version = "0.44.2", default-features = false, features = ["std", "nip49", "nip59"] }
nostr-sdk = { version = "0.44", features = ["nip59"] }
nostr-relay-builder = "0.44"
# OTLP export (behind the marmot-app `otlp-export` feature): map pre-aggregated
# relay telemetry straight to the OTLP protobuf and POST it over the existing
# reqwest/rustls stack, so the SDK's record-time histogram API is not needed.
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic-messages", "metrics"] }
prost = "0.14"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl", "trace"] }
tempfile = "3"

# test
proptest = "1"
insta = { version = "1", features = ["json"] }
test-log = { version = "0.2", features = ["trace"] }

# workspace-internal
fs-private = { path = "crates/fs-private" }
cgka-traits = { path = "crates/traits" }
cgka-engine = { path = "crates/cgka-engine" }
cgka-session = { path = "crates/cgka-session" }
storage-sqlite = { path = "crates/storage-sqlite" }
cgka-conformance-simulator = { path = "crates/cgka-conformance-simulator" }
transport-nostr-peeler = { path = "crates/transport-nostr-peeler" }
transport-nostr-adapter = { path = "crates/transport-nostr-adapter" }
transport-quic-stream = { path = "crates/transport-quic-stream" }
transport-quic-broker = { path = "crates/transport-quic-broker" }
agent-stream-compose = { path = "crates/agent-stream-compose" }
agent-control = { path = "crates/agent-control" }
agent-connector = { path = "crates/agent-connector" }
marmot-forensics = { path = "crates/marmot-forensics" }
marmot-markdown = { path = "crates/marmot-markdown" }
marmot-account = { path = "crates/marmot-account" }
marmot-app = { path = "crates/marmot-app" }
marmot-uniffi = { path = "crates/marmot-uniffi" }
wn-cli = { path = "crates/cli" }
