[package]
name = "mdk-relay-tests"
version = "0.1.0"
edition = "2024"
publish = false
description = "Relay compatibility testing tool for MDK/Marmot Protocol"
authors = ["MDK Developers"]
license = "MIT"

# Standalone crate - not part of the main workspace
[workspace]

[[bin]]
name = "relay-test"
path = "src/main.rs"

[dependencies]
# Nostr
nostr = { version = "0.44", default-features = false, features = ["std"] }
nostr-sdk = { version = "0.44" }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures-util = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["std", "derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
