[package]
name = "agent-connector"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "dm-agent"
path = "src/bin/dm-agent.rs"

[dependencies]
agent-control.workspace = true
agent-stream-compose.workspace = true
cgka-traits.workspace = true
clap.workspace = true
hex.workspace = true
libc.workspace = true
marmot-account.workspace = true
marmot-app.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread"] }
tracing.workspace = true
transport-quic-broker.workspace = true
transport-quic-stream.workspace = true

[dev-dependencies]
nostr-relay-builder.workspace = true
tempfile.workspace = true
