[package]
name = "agent-stream-compose"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cgka-traits.workspace = true
hex.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
transport-quic-broker.workspace = true
transport-quic-stream.workspace = true
