[package]
name = "cgka-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "In-process multi-client simulator and fixtures for the CGKA engine. Lives outside cgka-engine to keep production crates lean."

[features]
# Long-running property-based tests (1000+ iterations). Quick CI runs the
# default profile; nightly CI runs with this feature enabled.
conformance-slow = []

[dependencies]
cgka-traits.workspace = true
cgka-engine.workspace = true
storage-memory.workspace = true
serde = { workspace = true }
serde_json.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing.workspace = true
rand.workspace = true
proptest.workspace = true
hex.workspace = true
