[package]
name = "darkmatter-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
otlp-export = ["marmot-app/otlp-export"]

[[bin]]
name = "dm"
path = "src/main.rs"

[[bin]]
name = "dmd"
path = "src/bin/dmd.rs"

[dependencies]
cgka-traits.workspace = true
cgka-session.workspace = true
clap.workspace = true
crossterm.workspace = true
hex.workspace = true
libc.workspace = true
marmot-account.workspace = true
marmot-app.workspace = true
nostr.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net"] }
transport-quic-broker.workspace = true
transport-quic-stream.workspace = true
url.workspace = true

[dev-dependencies]
nostr-relay-builder.workspace = true
tempfile.workspace = true
