[package]
name = "wn-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
otlp-export = ["marmot-app/otlp-export"]

[[bin]]
name = "wn"
path = "src/main.rs"

[[bin]]
name = "wnd"
path = "src/bin/wnd.rs"

[dependencies]
agent-stream-compose.workspace = true
cgka-traits.workspace = true
cgka-session.workspace = true
clap.workspace = true
crossterm.workspace = true
fs-private.workspace = true
hex.workspace = true
libc.workspace = true
marmot-account.workspace = true
marmot-app.workspace = true
nostr.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net"] }
transport-quic-broker.workspace = true
transport-quic-stream.workspace = true
unicode-properties.workspace = true
url.workspace = true

[dev-dependencies]
nostr-relay-builder.workspace = true
tempfile.workspace = true
