[package]
name = "darkmatter-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "dm"
path = "src/main.rs"

[[bin]]
name = "dmd"
path = "src/bin/dmd.rs"

[dependencies]
cgka-traits.workspace = true
clap.workspace = true
crossterm.workspace = true
hex.workspace = true
marmot-account.workspace = true
marmot-app.workspace = true
nostr.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net"] }

[dev-dependencies]
tempfile.workspace = true
