[package]
name = "marmot-account"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
cgka-session.workspace = true
cgka-traits.workspace = true
hex.workspace = true
keyring-core.workspace = true
marmot-forensics.workspace = true
nostr.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
zeroize.workspace = true

[dev-dependencies]
cgka-engine.workspace = true
sha2.workspace = true
storage-sqlite.workspace = true
tempfile.workspace = true
tokio.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["protected"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd", target_os = "dragonfly"))'.dependencies]
zbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"] }

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "1"
