[package]
name = "marmot-app"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
cgka-engine.workspace = true
cgka-session.workspace = true
cgka-traits.workspace = true
chacha20poly1305.workspace = true
hex.workspace = true
hkdf.workspace = true
marmot-account.workspace = true
marmot-forensics.workspace = true
nostr.workspace = true
nostr-sdk.workspace = true
rand.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
storage-sqlite.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net"] }
tracing.workspace = true
transport-nostr-adapter = { workspace = true, features = ["sdk"] }
transport-nostr-peeler.workspace = true
transport-quic-broker.workspace = true
transport-quic-stream.workspace = true
url.workspace = true

[dev-dependencies]
nostr-relay-builder.workspace = true
tempfile.workspace = true
