[package]
name = "marmot-forensics-analyzer"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cgka-conformance-simulator.workspace = true
clap.workspace = true
marmot-forensics.workspace = true
serde.workspace = true
serde_json.workspace = true
