[package]
name = "mdk-cbindings"
version = "0.6.0"
edition = "2024"
description = "C ABI bindings for mdk-core with SQLite storage"
authors = [
    "Danny Morabito <danny@arx-ccn.com>",
    "Jeff Gardner <j@jeffg.me>",
    "MDK Developers",
]
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version = "1.90.0"
keywords = ["nostr", "mls", "openmls", "ffi", "bindings"]
categories = ["cryptography", "api-bindings"]
publish = false

[lib]
name = "mdk"
crate-type = ["cdylib", "staticlib"]

[dependencies]
mdk-core = { workspace = true, default-features = false }
mdk-sqlite-storage = { workspace = true, default-features = false }
mdk-storage-traits = { workspace = true, default-features = false }
nostr = { workspace = true, features = ["std", "nip44"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
hex = { workspace = true, features = ["std"] }
zeroize.workspace = true
tracing = { workspace = true, features = ["std"] }

[features]
default = []
mip04 = ["mdk-core/mip04"]

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
cbindgen = "0.28"
