[package]
name = "transport-nostr-peeler"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true
description = "Nostr transport peeler for Marmot CGKA transport messages."

[dependencies]
async-trait.workspace = true
cgka-traits.workspace = true
chacha20poly1305.workspace = true
hex.workspace = true
nostr.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
