[package]
name = "transport-quic-stream"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cgka-traits.workspace = true
quinn.workspace = true
rand.workspace = true
rcgen.workspace = true
rustls.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "time"] }
