[package]
name = "wn-opencode"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "wn-opencode"
path = "src/main.rs"

[dependencies]
agent-control = { path = "../../crates/agent-control" }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
