[package]
name = "wn-opencode"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "wn-opencode"
path = "src/main.rs"

[dependencies]
agent-control.workspace = true
clap.workspace = true
fs-private.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
